# Frontier-Trading

./: .gitignore  README.md  docker-compose.yml  test_services.sh
ai/: copilot.py
ai/models/: copilot.py
config/: alpaca.env.example
cpp/: CMakeLists.txt
cpp/include/frontier/: engine.hpp  rpc.hpp  types.hpp
cpp/src/: engine.cpp  http_server.cpp  main.cpp  rpc.cpp
cpp/src/engine/: order_manager.h  types.h
cpp/src/risk/: risk_manager.h
cpp/tests/: test_engine.cpp
docs/: ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AlertManager.tsx  ChartArea.tsx  DepthChart.tsx  MarketData.tsx  NotificationCenter.tsx  OrderBook.tsx  OrderTicket.tsx  Positions.tsx  StockSearch.tsx  Suggestions.tsx  TradesTape.tsx  TradingDashboard.tsx  Watchlist.tsx
frontend/src/contexts/: StockContext.tsx
frontend/src/hooks/: useFlashOnChange.ts  useStream.ts
frontend/src/pages/: Dashboard.tsx  TradingDashboard.tsx
frontend/src/stores/: tradingStore.ts
frontend/src/styles/: neon.css
frontend/src/types/: trading.ts
rust/: Cargo.toml
rust/api_gateway/: Cargo.toml
rust/api_gateway/src/: config.rs  handlers.rs  main.rs  services.rs
rust/copilot/: Cargo.toml
rust/copilot/src/: main.rs
rust/crates/frontier-bus/: Cargo.toml
rust/crates/frontier-bus/src/: lib.rs
rust/crates/frontier-types/: Cargo.toml
rust/crates/frontier-types/src/: lib.rs
rust/market_data/: Cargo.toml
rust/market_data/src/: alpaca_adapter.rs  alpaca_client.rs  binance_provider.rs  dexscreener_provider.rs  main.rs  provider_registry.rs
rust/market_events/: Cargo.toml
rust/market_events/src/: alert_poster.rs  config.rs  entity_linker.rs  event_processor.rs  ingestors.rs  main.rs  severity_scorer.rs  types.rs
rust/migrations/: 002_create_trading_tables.sql
rust/notifications/: Cargo.toml
rust/notifications/migrations/: 001_create_notification_tables.sql
rust/notifications/src/: alert_manager.rs  database.rs  lib.rs  main.rs  models.rs  news_monitor.rs  notification_service.rs  price_monitor.rs
rust/services/api_gateway/: Cargo.toml
rust/services/api_gateway/src/: main.rs
rust/services/market_data/: Cargo.toml
rust/services/market_data/src/: main.rs
rust/shared/: Cargo.toml
rust/shared/src/: event_bus.rs  lib.rs  risk_guardrails.rs  types.rs
rust/simple_market_data/: Cargo.toml
rust/simple_market_data/src/: main.rs
schemas/events/: copilot_suggestion.v1.json  market_tick.v1.json  order.v1.json  position.v1.json
scripts/: alpaca_sanity.sh  setup-dev.sh  start-dev.sh  test-alpaca-integration.sh  test-complete-integration.sh  test-cpp-engine.sh  test-market-events.sh  test-multi-provider.sh  test-vertical-slice.sh  wait_for_market_data.sh
