[package]
name = "market_data"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
config = "0.13"
dotenv = "0.15"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
shared = { path = "../shared" }
