[package]
name = "notifications"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
dashmap = "5.5"
parking_lot = "0.12"
config = "0.14"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
shared = { path = "../shared" }

# WebSocket for real-time notifications
tokio-tungstenite = "0.21"
futures-util = "0.3"

# RSS/News parsing
feed-rs = "1.3"
html2text = "0.5"

# Price monitoring
yahoo_finance = "0.1"
alpha_vantage = "0.1"

# Push notifications
web-push = "0.10"
base64 = "0.21"
