[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rust_decimal = { version = "1.32", features = ["serde"] }
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
