[package]
name = "frontier-bus"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.38", features = ["rt-multi-thread","macros","time","sync"] }
redis = { version = "0.24", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
frontier-types = { path = "../frontier-types" }
