[package]
name = "market_data"
version = "0.1.0"
edition = "2021"

[dependencies]
frontier-types = { path = "../../crates/frontier-types" }
frontier-bus = { path = "../../crates/frontier-bus" }
tokio = { version = "1.38", features = ["rt-multi-thread","macros","time"] }
reqwest = { version = "0.12", default-features = false, features = ["json","rustls-tls"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14"
dotenv = "0.15"
redis = { version = "0.24", features = ["tokio-comp"] }
